@@ -2039,6 +2039,98 @@ class TestCase::Lib::Fn2 {
     return 1;
   }
 
+  static method memcpy_object : int () {
+    
+    # Copy
+    {
+      my $dest = new object[4];
+      my $point0 = Point->new_xy(1, 1);
+      my $point1 = Point->new_xy(3, 3);
+      my $point2 = Point->new_xy(5, 5);
+      my $source = [$point0, $point1, $point2];
+      Fn->memcpy_object($dest, 0, $source, 0, 3);
+      unless ($dest->[0] == $point0) {
+        return 0;
+      }
+      unless ($dest->[1] == $point1) {
+        return 0;
+      }
+      unless ($dest->[2] == $point2) {
+        return 0;
+      }
+      unless ($dest->[3] == undef) {
+        return 0;
+      }
+    }
+
+    # Copy with offset
+    {
+      my $dest = new object[4];
+      my $point0 = Point->new_xy(1, 1);
+      my $point1 = Point->new_xy(3, 3);
+      my $point2 = Point->new_xy(5, 5);
+      my $source = [$point0, $point1, $point2];
+      Fn->memcpy_object($dest, 1, $source, 0, 3);
+      unless ($dest->[0] == undef) {
+        return 0;
+      }
+      unless ($dest->[1] == $point0) {
+        return 0;
+      }
+      unless ($dest->[2] == $point1) {
+        return 0;
+      }
+      unless ($dest->[3] == $point2) {
+        return 0;
+      }
+    }
+    
+    # Copy with offset and length
+    {
+      my $dest = new object[4];
+      my $point0 = Point->new_xy(1, 1);
+      my $point1 = Point->new_xy(3, 3);
+      my $point2 = Point->new_xy(5, 5);
+      my $source = [$point0, $point1, $point2];
+      Fn->memcpy_object($dest, 1, $source, 1, 2);
+      unless ($dest->[0] == undef) {
+        return 0;
+      }
+      unless ($dest->[1] == $point1) {
+        return 0;
+      }
+      unless ($dest->[2] == $point2) {
+        return 0;
+      }
+      unless ($dest->[3] == undef) {
+        return 0;
+      }
+    }
+
+    # Copy with 0 length
+    {
+      my $dest = new object[4];
+      my $point0 = Point->new_xy(1, 1);
+      my $point1 = Point->new_xy(3, 3);
+      my $point2 = Point->new_xy(5, 5);
+      my $source = [$point0, $point1, $point2];
+      Fn->memcpy_object($dest, 0, $source, 0, 0);
+      unless ($dest->[0] == undef) {
+        return 0;
+      }
+      unless ($dest->[1] == undef) {
+        return 0;
+      }
+      unless ($dest->[2] == undef) {
+        return 0;
+      }
+      unless ($dest->[3] == undef) {
+        return 0;
+      }
+    }
+    return 1;
+  }
+
   static method memmove_byte : int () {
     
     # Copy
